--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,4 +8,4 @@ server:
 
 ws:
   endpoint: suggestions
-  filePath: /home/joel/Downloads/backend-coding-challenge-one-master/data/cities_canada-usa.tsv
+  filePath: gs://app-spring-bucket/cities_canada-usa.tsv
