--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,15 +2,10 @@ spring:
   application:
     name: suggestion-service
 
-gcloud:
-  projectId: idyllic-nova-346502
-  jsonKey: classpath:key.json
-  bucket: app-spring-bucket
-  object: cities_canada-usa.tsv
-
 server:
   error:
     include-message: always
 
 ws:
   endpoint: suggestions
+  filePath: gs://app-spring-bucket/cities_canada-usa.tsv
